# trm-lit

./: .gitignore  README.md  main.py  pyproject.toml  train.py
configs/: default.yaml
datasets/: __init__.py  shakespeare.py
models/: __init__.py  char_transformer.py  trm-s.py  trm.py  trm_gpt.py
