[project]
name = "trm-lit"
version = "0.1.0"
description = "Unofficial implementation of Tiny Recursive Models"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "lightning>=2.5.5",
    "torch>=2.8.0",
    "transformers>=4.57.0",
    "wandb>=0.22.2",
    "jsonargparse[signatures]>=4.27.7",
    "rich>=13.0.0",
]
